Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31534

Video viewport doesn't adapt to mmrenderer viewport size on PlayBookOS/BB10

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • None
    • 5.1.0 Beta 1
    • None
    • Other

      On some hardware the PlayBookOS and BB10 run on, the viewport of the video window initially contains a "keep out region", which later on is "removed" by the mmrenderer process, which paints in this window. Howevere, the current code in qtmultimedia/src/plugins/blackberry/common/WindowGrabber.cpp assumes that the window size doesn't change. Therefor the grabbed frames contain transparent borders.

      The attached patch fixes the issue by checking whether the viewport size has changed and adapting the frame size accordingly. However it needs some more testing against the camera functionality, as that one uses the WindowGrabber for its viewport rendering as well.

        For Gerrit Dashboard: QTBUG-31534
        # Subject Branch Project Status CR V

            tokoe.kdab Tobias Koenig
            tokoe.kdab Tobias Koenig
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes